ingress-test/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
    test: testme5
  name: nginx
spec:
  nodeSelector:
    kubernetes.io/os: linux
  containers:
  - image: docker.io/nginx:latest
    name: nginx
    resources: {}
